--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ font-family: 'Raleway', sans-serif; */
 
   --fs-07: 0.438rem;
   --fs-08: 0.5em;
+  --fs-09: 0.563em;
   --fs-10: 0.625rem;
   --fs-12: 0.75rem;
   --fs-13: 0.813rem;
@@ -78,6 +79,15 @@ img {
   font-family: var(--ff-secondary);
   font-size: var(--fs-12);
 }
+.list-element > a:hover,
+.list-element > a:active {
+  font-weight: var(--fw-bold);
+}
+
+.navbar .list-element > a:hover,
+.navbar .list-element > a:active {
+  text-decoration: underline;
+}
 
 .title {
   font-family: var(--ff-secondary);
@@ -103,6 +113,7 @@ img {
 
 .link {
   color: var(--clr-cyan);
+  text-decoration: none;
 }
 
 .person__name {
@@ -111,7 +122,11 @@ img {
 }
 
 .person__position {
-  font-size: var(--fs-07);
+  font-size: var(--fs-09);
+}
+
+.section-cta .title {
+  font-size: var(--fs-18);
 }
 
 .icon-area .text {
@@ -131,7 +146,8 @@ img {
   background: linear-gradient(to right, var(--clr-cyan), var(--clr-blue));
   border: none;
   border-radius: 2em;
-  padding: 0.75em 4em;
+  padding: 1em 2em;
+  width: 225px;
   color: var(--clr-white);
   font-family: var(--ff-secondary);
   font-size: inherit;
@@ -144,7 +160,11 @@ img {
 }
 
 .form > input {
-  /* pendent */
+  border: none;
+  border-radius: 2em;
+  width: 100%;
+  padding: 1.5em 2em;
+  font-size: var(--fs-10);
 }
 
 /* ================== */
@@ -152,35 +172,300 @@ img {
 /* ================== */
 html,
 body {
-  /* Background */
-  /* background: url('./images/bg-mobile.png') no-repeat;
-  background-size: 100% 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-
-  height: 100%;
-  padding: 0 2em;
-  width: 100%; */
+  background-color: var(--clr-dark-blue-2);
 }
 
-.container {
-  /* flex properties */
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  height: 95%;
+.wrapper {
+  padding: 0 1.5em;
   margin: 0em auto;
+
   min-width: 290px;
-  max-width: 500px; */
+  max-width: 500px;
 }
 
 /* ================== */
 /* SECTIONS */
 /* ================== */
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding-top: 1.5em;
+}
+
+.header .logo-img {
+  width: 45%;
+  margin-bottom: -0.5em;
+}
+
+.navbar {
+  width: 50%;
+  margin-right: 1em;
+}
+
+.navbar ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+.main {
+  margin-top: 4em;
+}
+
+.section-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.section-hero .picture {
+  margin: 0 auto;
+  width: 90%;
+}
+
+.section-hero .title.title--big {
+  margin-top: 1.5em;
+}
+
+.section-hero .text {
+  margin: 1.5em auto 0;
+  width: 90%;
+}
+
+.section-hero .btn {
+  margin-top: 2em;
+}
+
+.section-grid {
+  margin-top: 6em;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.feature {
+  margin: 5em auto 0;
+  width: 90%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature .feature-image img {
+  display: block;
+  width: 75%;
+  margin: 0 auto;
+}
+
+.feature .title {
+  margin-top: 2em;
+}
+
+.feature .text {
+  margin-top: 1em;
+}
+
+.section-hero-bis {
+  margin-top: 10em;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.partition-a {
+  margin: 0 auto;
+}
+
+.partition-a img {
+  display: block;
+  width: 95%;
+  margin: 0 auto;
+}
+
+.partition-b {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.partition-b .title {
+  margin-top: 2em;
+}
+
+.partition-b .text {
+  margin-top: 1em;
+  text-align: left;
+  padding-right: 1em;
+}
+
+.partition-b .link {
+  margin-top: 1em;
+  padding-bottom: 0.25em;
+  border-bottom: 1px solid var(--clr-cyan);
+}
+.partition-b .link .arrow-img {
+  transform: translate(20%, 20%);
+}
+
+.section-cards {
+  margin-top: 10em;
+  padding: 0 1.5em;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  margin-top: 2em;
+  background-color: var(--clr-dark-blue-4);
+  padding: 2em 2.5em 1.5em 1.5em;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.card .text {
+  text-align: left;
+}
+
+.card .person {
+  margin-top: 1.5em;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.75em;
+}
+
+.profile-img {
+  display: block;
+  border-radius: 50%;
+  width: 2em;
+}
+
+.person__position {
+  margin-top: 0.5em;
+}
+
+.section-cta {
+  margin-top: 12em;
+  background: var(--clr-dark-blue);
+  padding: 2em 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-cta .text {
+  margin-top: 1em;
+  padding: 0 2.5em;
+}
+
+.section-cta .form {
+  margin-top: 2em;
+  padding: 0 1.5em;
+}
+
+.section-cta .btn {
+  margin-top: 1.5em;
+  width: 100%;
+}
+
+.footer {
+  margin-top: 4em;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.footer-container .logo-img {
+  display: block;
+  width: 60%;
+  padding-left: 0.5em;
+}
+
+.section-grid-bis {
+  margin-top: 1em;
+  display: grid;
+  grid-template-rows: repeat(5, auto);
+}
+
+.icon-area {
+  margin-top: 1.5em;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2em;
+}
+
+.icon-area .icon-img {
+  width: 1.15em;
+  padding-top: 0.5em;
+}
+
+.icon-area .text {
+  text-align: left;
+}
+
+.footer .col:nth-of-type(3) {
+  margin-top: 3em;
+}
+.footer .col:nth-of-type(4) {
+  margin-top: 3em;
+}
+
+.footer .col ul {
+  list-style: none;
+}
+.footer .col ul > li {
+  margin-top: 1em;
+}
+
+.footer .col .row ul {
+  margin-top: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.25em;
+}
+
+.fab {
+  border: 1px solid var(--clr-white);
+  border-radius: 50%;
+  color: var(--clr-white);
+  height: 2.5em;
+  padding: 0.75em;
+  width: 2.5em;
+}
+.fab:hover {
+  border-color: var(--clr-cyan);
+  color: var(--clr-cyan);
+}
+
+/*  */
+
+.footer-signature {
+  margin-top: 4em;
+  padding: 0.5em 0;
+}
 .attribution {
   font-size: 11px;
   text-align: center;
