--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ body {
   margin: 0em auto;
 
   min-width: 290px;
-  max-width: 500px;
+  max-width: 600px;
 }
 
 /* ================== */
@@ -472,4 +472,185 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 1001px) {
+  /* Typography */
+  .list-element > a {
+    font-size: var(--fs-16);
+  }
+
+  .title.title--big,
+  .section-hero-bis .title {
+    font-size: var(--fs-40);
+  }
+
+  .section-hero .text {
+    font-size: var(--fs-20);
+  }
+
+  .section-grid .title {
+    font-size: var(--fs-20);
+  }
+
+  .section-grid .text,
+  .partition-b .text,
+  .link {
+    font-size: var(--fs-16);
+  }
+
+  .card .text {
+    font-size: var(--fs-14);
+  }
+
+  .section-cta .title {
+    font-size: var(--fs-32);
+  }
+
+  /* Buttons and styles */
+  .btn {
+    font-size: var(--fs-16);
+  }
+
+  .section-cta .form .btn {
+    font-size: var(--fs-14);
+  }
+
+  /* Utility Styles */
+  .wrapper {
+    padding: 0 3em;
+    margin: 0em auto;
+
+    min-width: unset;
+    max-width: 1400px;
+  }
+
+  /* Sections */
+  .header {
+    padding-top: 3em;
+  }
+
+  .header .logo-img {
+    width: 70%;
+    margin-bottom: -0.5em;
+  }
+
+  .navbar {
+    width: 50%;
+    margin-right: 1em;
+    max-width: 300px;
+  }
+
+  .section-hero {
+    margin: 0 auto;
+    width: 75%;
+    max-width: 720px;
+  }
+
+  .section-hero .picture-img {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .section-hero .text {
+    margin: 1.5em auto 0;
+    width: 85%;
+  }
+
+  .section-grid {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .feature {
+    max-width: 375px;
+  }
+
+  .section-hero-bis {
+    flex-direction: row;
+  }
+
+  .partition-a {
+    margin-left: 0;
+    width: 50%;
+  }
+
+  .partition-a img {
+    width: 100%;
+  }
+
+  .partition-b {
+    width: 45%;
+    text-align: left;
+  }
+
+  .partition-b .title {
+    margin-top: 0;
+    text-align: left;
+    max-width: 450px;
+  }
+
+  .section-cards {
+    padding: 0;
+
+    flex-direction: row;
+    gap: 2em;
+  }
+
+  .card {
+    padding: 2.5em 3.25em 2em 2em;
+
+    max-width: 350px;
+  }
+
+  .section-cta {
+    padding: 2em 2em;
+    margin: 12em auto 0;
+    width: 60%;
+    max-width: 800px;
+  }
+
+  .section-cta .form {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5em;
+    height: 35px;
+    width: 90%;
+  }
+
+  .section-cta .form input {
+    width: 60%;
+  }
+  .section-cta .form .btn {
+    padding: 0;
+    margin-top: 0;
+    width: 40%;
+  }
+
+  .footer {
+    margin-top: 8em;
+  }
+
+  .section-grid-bis {
+    margin-top: 1em;
+    display: grid;
+    grid-template-columns: 2.5fr 2fr 1fr 1fr 1fr;
+    grid-column-gap: 3em;
+  }
+
+  .section-grid-bis .col:nth-of-type(3),
+  .section-grid-bis .col:nth-of-type(4) {
+    margin-top: 0.5em;
+  }
+
+  .section-grid-bis .col:nth-of-type(5) {
+    align-content: flex-start;
+  }
+
+  .footer-signature {
+    margin-top: 4em;
+  }
 }
