--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ body {
 }
 
 .card {
+  position: relative;
   margin-top: 2em;
   background-color: var(--clr-dark-blue-4);
   padding: 2em 2.5em 1.5em 1.5em;
@@ -334,6 +335,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+
+.card .card-quote-img {
+  position: absolute;
+  width: 1.75em;
+  top: -22px;
+  left: 10px;
 }
 
 .card .text {
@@ -604,6 +612,17 @@ body {
     padding: 2.5em 3.25em 2em 2em;
 
     max-width: 350px;
+  }
+
+  .card:nth-of-type(1) {
+    z-index: 20;
+  }
+
+  .card .card-quote-img {
+    width: 4em;
+    top: -30px;
+    left: -10px;
+    z-index: 10;
   }
 
   .section-cta {
